--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.10.6",
     "@emotion/server": "^11.10.0",
     "@formkit/auto-animate": "1.0.0-beta.6",
+    "@headlessui/react": "^1.7.13",
     "@mantine/core": "^6.0.4",
     "@mantine/hooks": "^6.0.4",
     "@mantine/next": "^6.0.4",
@@ -24,7 +25,8 @@
     "react-hook-form": "^7.43.8",
     "react-multi-carousel": "^2.8.2",
     "tabler-icons-react": "^1.56.0",
-    "typescript": "5.0.2"
+    "typescript": "5.0.2",
+    "valtio": "^1.10.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
