--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "codegen": "graphql-codegen --watch"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.11",
     "@emotion/react": "^11.10.6",
     "@emotion/server": "^11.10.0",
     "@formkit/auto-animate": "1.0.0-beta.6",
@@ -19,6 +21,7 @@
     "@types/node": "18.15.7",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "graphql": "^16.6.0",
     "next": "13.2.4",
     "nextjs-progressbar": "^0.0.16",
     "react": "18.2.0",
@@ -30,6 +33,9 @@
     "valtio": "^1.10.3"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^3.3.0",
+    "@graphql-codegen/client-preset": "^3.0.0",
+    "@graphql-typed-document-node/core": "^3.2.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7"
