--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "@types/node": "18.15.7",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "cookies-next": "^2.1.1",
     "graphql": "^16.6.0",
     "next": "13.2.4",
     "nextjs-progressbar": "^0.0.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.8",
+    "react-hot-toast": "^2.4.0",
     "react-multi-carousel": "^2.8.2",
     "tabler-icons-react": "^1.56.0",
     "typescript": "5.0.2",
