--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "@apollo/client": "^3.7.11",
     "@emotion/react": "^11.10.6",
     "@emotion/server": "^11.10.0",
-    "@formkit/auto-animate": "1.0.0-beta.6",
     "@headlessui/react": "^1.7.13",
     "@mantine/core": "^6.0.4",
     "@mantine/hooks": "^6.0.4",
     "@mantine/next": "^6.0.4",
+    "@stripe/react-stripe-js": "^2.1.0",
+    "@stripe/stripe-js": "^1.52.1",
     "@types/node": "18.15.7",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
