--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@mantine/core": "^6.0.4",
     "@mantine/hooks": "^6.0.4",
     "@mantine/next": "^6.0.4",
+    "@paypal/react-paypal-js": "^7.8.3",
     "@stripe/react-stripe-js": "^2.1.0",
     "@stripe/stripe-js": "^1.52.1",
     "@types/node": "18.15.7",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "cookies-next": "^2.1.1",
+    "editorjs-blocks-react-renderer": "^1.3.0",
     "graphql": "^16.6.0",
     "next": "13.2.4",
     "nextjs-progressbar": "^0.0.16",
@@ -31,6 +33,7 @@
     "react-hook-form": "^7.43.8",
     "react-hot-toast": "^2.4.0",
     "react-multi-carousel": "^2.8.2",
+    "react-use-cart": "^1.13.0",
     "tabler-icons-react": "^1.56.0",
     "typescript": "5.0.2",
     "valtio": "^1.10.3"
